[package]
name = "epson"
version = "0.1.9"
edition = "2024"
license = "MIT"
authors = ["Paul Tagliamonte <paultag@gmail.com>"]
repository = "https://github.com/paultag/epson-rs"
description = "support for communicating with Epson brand thermal POS printers"

[features]
tokio = ["dep:tokio"]

[dependencies]
image = "0"
tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }
