[package]
name = "epson"
version = "0.2.2"
edition = "2024"
license = "MIT"
authors = ["Paul Tagliamonte <paultag@gmail.com>"]
repository = "https://git.pault.ag/rust/epson"
description = "support for communicating with Epson brand thermal POS printers"

[features]
tokio = ["dep:tokio"]

[dependencies]
image = "0"
tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
